<resources>
    <string name="app_name">DnD Dice Roller</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="number">NUMBER</string>
    <string name="roll">Roll</string>
    <string name="dnd_logo">dnd logo</string>
    <string name="four_sided_die">four sided die</string>
    <string name="six_sided_die">six sided die</string>
    <string name="eight_sided_die">eight sided die</string>
    <string name="ten_sided_die">ten sided die</string>
    <string name="twelve_sided_die">twelve sided die</string>
    <string name="twenty_sided_die">twenty sided die</string>
    <string name="select_your_dice_n_shake_your_phone_to_roll">Select your dice +\n shake your phone to roll!</string>
</resources>
