<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="802dp"
        android:layout_height="600dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/dndIcon"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/dnd"
            android:contentDescription="@string/dnd_logo" />

        <TextView
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/number"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />



    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/fourSidedDie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:src="@drawable/d4_bar_purp"
                android:contentDescription="@string/four_sided_die" />

            <ImageButton
                android:id="@+id/sixSidedDie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/six_sided_die"
                android:src="@drawable/d6_bar_blue" />

            <ImageButton
                android:id="@+id/eightSidedDie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/eight_sided_die"
                android:src="@drawable/d8_bar_green" />

            <ImageButton
                android:id="@+id/tenSidedDie"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/ten_sided_die"
                android:src="@drawable/d10_bar_yellow" />

            <ImageButton
                android:id="@+id/twelveSidedDie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/twelve_sided_die"
                android:src="@drawable/d12_bar_orange" />

            <ImageButton
                android:id="@+id/twentySidedDie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/twenty_sided_die"
                android:src="@drawable/d20_bar_red" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>